# LLM_Lab_2

./: .env.example  README.md  merge_outputs copy.json  merge_outputs.json  output.txt  prediction_output.json  prediction_output_old.json  prediction_outputs.json  pyproject.toml  report.md
docs/: Exploratory Data Analysis.md  Yelp Data Translation.md
knowledge/: user_preference.txt
src/week5lab/: crew.py  main.py
src/week5lab/config/: agents.yaml  tasks.yaml
src/week5lab1/: crew.py  flow.py  main.py
src/week5lab1/config/: agents.yaml  tasks.yaml
src/week5lab1/tools/: __init__.py  custom_tool.py
