[project]
name = "week5lab"
version = "0.1.0"
description = "week5lab using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "cohere>=5.20.7",
    "crewai[google-genai,tools]==1.9.3",
    "fastapi>=0.135.2",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "litellm>=1.75.3",
    "sentence-transformers>=5.3.0",
    "torch>=2.4.0",
    "torchaudio>=2.4.0",
    "torchvision>=0.19.0",
]

[project.scripts]
crewai = "week5lab.main:crewai_entry"
week5lab = "week5lab.main:run"
run_crew = "week5lab.main:run"
test_eval = "week5lab.main:run_test_eval"
train = "week5lab.main:train"
replay = "week5lab.main:replay"
test = "week5lab.main:test"
run_with_trigger = "week5lab.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

# CUDA 12.4 PyTorch wheels (Windows/Linux). macOS uses default PyPI (CPU).
[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
